* chore(BlogPostsGallery.tsx): remove unnecessary ellipsis from content * chore(BlogPost.tsx): remove unused import of console.log * chore(blogPost.module.scss): add CSS styling for limiting content to 3 lines

--- a/src/components/blogPostsGallery/blogPost/blogPost.module.scss
+++ b/src/components/blogPostsGallery/blogPost/blogPost.module.scss
@@ -47,6 +47,13 @@
       color: $bleuClair;
     }
 
+    .content {
+      display: -webkit-box;
+      -webkit-box-orient: vertical;
+      -webkit-line-clamp: 3;
+      overflow: hidden;
+    }
+
   }
 
   @media (min-width: 640px) {
