--- a/src/components/blogPostsGallery/blogPost/blogPost.module.scss
+++ b/src/components/blogPostsGallery/blogPost/blogPost.module.scss
@@ -1,15 +1,49 @@
 @import '../../../app/variables.scss';
 
+@mixin medium-up {
+  @media (min-width: 640px) {
+    @content;
+  }
+}
+
 .article {
 
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   width: 100%;
-  margin-bottom: 10px;
   background-color: white;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
+
+  @include medium-up {
+    width: 100%;
+    min-width: 250px;
+    max-width: 400px;
+  }
+
+  &.first {
+
+    @include medium-up {
+      flex: 1;
+      width: 50%;
+      min-width: 500px;
+      height: 100%;
+
+      .imgContainer {
+        height: 450px;
+      }
+
+      .text {
+        height: 100%;
+        min-height: 110px;
+
+        h3 {
+          font-size: 28px;
+        }
+      }
+    }
+  }
 
   &>a {
     width: 100%;
@@ -20,6 +54,10 @@
     width: 100%;
     height: 300px;
     position: relative;
+
+    @include medium-up {
+      height: 250px;
+    }
 
     img {
       object-fit: cover;
@@ -53,38 +91,5 @@
       -webkit-line-clamp: 3;
       overflow: hidden;
     }
-
   }
-
-  @media (min-width: 640px) {
-    width: 250px;
-
-    .imgContainer {
-      height: 250px;
-    }
-
-    &.first {
-      flex: 1;
-      width: 50%;
-      min-width: 500px;
-      height: 100%;
-
-      .imgContainer {
-        height: 450px;
-      }
-
-      .text {
-        height: 100%;
-        min-height: 110px;
-
-        h3 {
-          font-size: 28px;
-        }
-      }
-    }
-  }
-
-
-
-
 }
