--- a/src/components/blogPostsGallery/blogPostsGallery.module.scss
+++ b/src/components/blogPostsGallery/blogPostsGallery.module.scss
@@ -56,6 +56,7 @@
       justify-content: space-between;
       flex-wrap: wrap;
       width: 100%;
+      gap: 20px;
 
       @media (min-width: 640px) {
         flex-direction: row;
