--- a/src/app/about/page.module.scss
+++ b/src/app/about/page.module.scss
@@ -1,3 +1,139 @@
-.container {
-  
+@import "../variables.scss";
+
+.imgContainer {
+  position: relative;
+  height: 350px;
+  width: 100vw;
+
+  img {
+    object-fit: cover;
+  }
+
+  @media (min-width: 640px) {
+    width: auto;
+    aspect-ratio: 1/1;
+
+    img {
+      @include imageRadiusShadow;
+    }
+  }
+
+}
+
+.about {
+
+  margin-bottom: 50px;
+
+  .path {
+    @include container;
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+
+  .banniere {
+    background-image: url("/img/greenstone.jpeg");
+    background-position: center;
+    width: 100%;
+    height: 220px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 50px;
+
+    .rectangle {
+      background-color: white;
+      margin: auto;
+      padding: 20px 60px;
+
+      h1 {
+        background-image: url("/img/greenstone.jpeg");
+        background-position: center;
+        color: transparent;
+        background-clip: text;
+        -webkit-background-clip: text;
+        margin: 0;
+        text-transform: uppercase;
+        font-size: 48px;
+        font-weight: bold;
+      }
+    }
+
+
+  }
+
+  .aboutUs {
+    @include container;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    min-width: inherit;
+    margin: 30px auto;
+    text-align: justify;
+
+    @media (min-width: 640px) {
+      max-width: 900px;
+      text-align: center;
+    }
+  }
+
+  .texteImage {
+    @include container;
+
+    display: flex;
+    flex-direction: column-reverse;
+    gap: 30px;
+    text-align: left;
+    align-items: center;
+    margin: 30px auto;
+
+    @media (min-width: 640px) {
+      flex-direction: row;
+    }
+
+    .text p {
+      margin: 20px 0;
+      text-align: justify;
+    }
+
+    &.gauche {
+      @media (min-width: 640px) {
+        flex-direction: row-reverse;
+      }
+    }
+  }
+
+  .citation {
+    @include container;
+
+    margin: 50px auto;
+    padding-inline: 40px;
+    text-align: center;
+    font-style: italic;
+    position: relative;
+    font-size: 1.5rem;
+
+    p {
+      width: fit-content;
+      margin-inline: auto;
+
+      &::before {
+        content: "“";
+        font-size: 6rem;
+        color: #1d5f6b;
+        position: absolute;
+        transform: translate(-50px, 0);
+      }
+
+      &::after {
+        content: "”";
+        font-size: 6rem;
+        color: #1d5f6b;
+        position: absolute;
+        bottom: -60px;
+      }
+    }
+  }
+
 }
