--- a/src/app/variables.scss
+++ b/src/app/variables.scss
@@ -13,6 +13,13 @@ $headerHeight : 150px;
 @mixin container {
   width: 100%;
   max-width: 1400px;
-  margin: 0 auto;
-  padding: 0 1rem;
+  margin-left: auto;
+  margin-right: auto;
+  padding-right: 1rem;
+  padding-left: 1rem;
+}
+
+@mixin imageRadiusShadow {
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
