--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -31,7 +31,7 @@
     .imagePropos {
       position: relative;
       height: 400px;
-      width: 100%;
+      width: 100vh;
       margin-bottom: 0.5rem;
 
       @media (min-width: 640px) {
