--- a/src/components/herobanner/herrobanner.module.scss
+++ b/src/components/herobanner/herrobanner.module.scss
@@ -42,6 +42,7 @@
     .title {
       margin-top: inherit;
       margin-bottom: 30px;
+      padding-inline: 10px;
       font-size: 40px;
       font-weight: 400;
       color: $bleuClair;
